--- a/coffee/mixins.less
+++ b/coffee/mixins.less
@@ -140,7 +140,8 @@
 
 // Flexbox
 .display-box() {
-  .box-sizing( border-box );
+  display: -webkit-box;
+  display: box;
 }
 
 .box-flex(@flex) {
